# LD-DJAM8-Engine

./: .gitignore  CMakeLists.txt  LICENSE
include/: action.hpp  actionenum.hpp  actionmanager.hpp  componentcontainer.hpp  componentmanager.hpp  engine.hpp  entity.hpp  inputmanager.hpp  inputmap.hpp  iscene.hpp  isystem.hpp  memorypool.hpp  scenemanager.hpp  systemmanager.hpp
include/components/: cposition.hpp
include/scenes/: testscene.hpp
include/systems/: oscillatepositionsystem.hpp
src/: action.cpp  actionmanager.cpp  componentmanager.cpp  engine.cpp  entity.cpp  inputmanager.cpp  inputmap.cpp  isystem.cpp  main.cpp  memorypool.cpp  scenemanager.cpp  systemmanager.cpp
src/scenes/: testscene.cpp
src/systems/: oscillatepositionsystem.cpp
